# notes-modern-cpp-programming

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  REAMDE.md  justfile  notes.md
include/: greeting.h
src/: basic_concepts_i.cpp  data_types.cpp  exec1.cpp  exec2.cpp  greeting.cpp  main.cpp
src/basic_concepts_i/: CMakeLists.txt  main.cpp
src/basic_concepts_ii/: CMakeLists.txt  main.cpp
src/basic_concepts_iii/: CMakeLists.txt  main.cpp
src/basic_concepts_iv/: CMakeLists.txt  main.cpp
src/basic_concepts_v/: CMakeLists.txt  main.cpp
src/oop_i/: CMakeLists.txt  main.cpp
src/oop_ii/: CMakeLists.txt  main.cpp
src/templates_metaprogramming_i/: CMakeLists.txt  main.cpp
src/templates_metaprogramming_ii/: CMakeLists.txt  main.cpp
